Fixing spacing of events and hover for Quick Links

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -1969,6 +1969,8 @@ a.icon-hospital:hover {
     color: #fff; }
   .quicklinks-menu a.is-active, .quicklinks-menu a:active, .quicklinks-menu a.active-trail {
     color: #fff; }
+  .quicklinks-menu a:hover {
+    text-decoration: underline; }
   .quicklinks-menu .quicklinks-close {
     display: block;
     cursor: pointer;
@@ -6744,7 +6746,8 @@ a[href*="http"] .article-header__date {
   float: right;
   width: 75%;
   letter-spacing: 0.2px;
-  white-space: normal; }
+  white-space: normal;
+  padding-left: 10px; }
 
 .event-card__title {
   margin: 0;
@@ -6783,7 +6786,7 @@ a[href*="http"] .article-header__date {
   padding-left: 25px; }
   .event-card__date span,
   .event-card__location span {
-    margin-left: -25px;
+    margin-left: -30px;
     display: inline-block;
     width: 25px;
     text-align: center;
