--- a/docroot/themes/custom/ucsf/scss/navigation/_quicklinks.scss
+++ b/docroot/themes/custom/ucsf/scss/navigation/_quicklinks.scss
@@ -163,6 +163,10 @@
 
   a {
     @include link-colors($c-white);
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .quicklinks-close {
@@ -247,4 +251,3 @@ body.loading .quicklinks {
     }
   }
 }
-
