--- a/docroot/themes/custom/ucsf/scss/paragraph/_paragraph-events.scss
+++ b/docroot/themes/custom/ucsf/scss/paragraph/_paragraph-events.scss
@@ -127,6 +127,7 @@
   width: 75%;
   letter-spacing: 0.2px;
   white-space: normal;
+  padding-left: 10px;
 }
 
 .event-card__title {
@@ -165,7 +166,7 @@
   padding-left: 25px;
 
   span {
-    margin-left: -25px;
+    margin-left: -30px;
     display: inline-block;
     width: 25px;
     text-align: center;
